# Mega_Project

./: README.md  main.py  my_project.code-workspace  pyproject.toml
functions/: corr_matrix.py  detection.py  predicting_progression.py  progression_func.py  scatter_plot.py  women_vs_men.py
src/my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
