[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "1.0.0"  # A clearer version format
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "tox",
    "jupyter",
    "ruff",
    "mypy",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]==7.3.1",
    "pytest-html==4.1.1",
    "build>=1.2.2",
]

lint = [
    "mypy",
    "ruff",
]

test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "coverage[toml]==7.3.1",
    "pytest-html==4.1.1"
]

build = [
    "build>=1.2.2",
]

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "conf.py",
]
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",   # Conflicts with the formatter
    "ISC001",   # Conflicts with the formatter
    "ANN101",   # "missing-type-self"
    "ANN201",   # "missing-return-type"
    "PT001",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT004",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT005",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "D415",     # Docstring can end without ./!
    "D416",     # Docstring Return can end without :
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
    "D104", # No need to doc this file
]
"docs/**" = [
    "INP001",   # Requires __init__.py but docs folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# disallow_untyped_defs = true  # Disable the disallow_untyped_defs option
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "my-project-\\d+", # Ignore temporary folder created by setuptools when building an sdist
    "venv.*/",
    "build/",
    "dist/",
]

